--- a/radio/src/translations/cz.h.txt
+++ b/radio/src/translations/cz.h.txt
@@ -440,8 +440,8 @@
 #define TR_ELIMITS             TR("Limit+25%", "Kanál +/- 125%")
 #define TR_ETRIMS              TR("širšíTrim", "Široký trim")
 #define TR_TRIMINC             TR("KrokTrimu", "Krok trimu")
-#define TR_TTRACE              TR("StopaPlyn", "Stopař plynu")
-#define TR_TTRIM               TR("TrimPlynu", "TrimPlyn-volnoběh")
+#define TR_TTRACE              TR(INDENT "StopaPlyn", INDENT "Stopař plynu")
+#define TR_TTRIM               TR(INDENT "TrimPlynu", INDENT "Trim-volnoběh")
 #define TR_BEEPCTR             "(\043)Středy"
 #define TR_PROTO               INDENT"Protokol"
 #define TR_PPMFRAME            "PPM frame"
@@ -504,7 +504,8 @@
 #define TR_MEMORYWARNING       INDENT"Plná pamět'"
 #define TR_ALARMWARNING        INDENT"Vypnutý zvuk"
 #define TR_RENAVIG             "Navig. RotEnc"
-#define TR_THROTTLEREVERSE     TR("ReversPlyn", "Revers plynu")
+#define TR_THROTTLE_LABEL      "Plyn"
+#define TR_THROTTLEREVERSE     INDENT "Revers"
 #define TR_MINUTEBEEP          TR(INDENT"Minuta", INDENT"Oznamovat minuty")
 #define TR_BEEPCOUNTDOWN       INDENT"Odpočet"
 #define TR_PERSISTENT          INDENT"Trvalé"
@@ -513,9 +514,9 @@
 #define TR_BLONBRIGHTNESS      INDENT"Jas Zap."
 #define TR_BLOFFBRIGHTNESS     INDENT"Jas Vyp."
 #define TR_SPLASHSCREEN        "úvodníLogo"
-#define TR_THROTTLEWARNING     "(\043)Plyn"
-#define TR_SWITCHWARNING       "(\043)Spínače"
-#define TR_POTWARNING          TR("Pot Warn.","Pot Warning")
+#define TR_THROTTLEWARNING     TR("(\043)Plyn", INDENT "(\043)Plyn")
+#define TR_SWITCHWARNING       TR("(\043)Spínače", INDENT "(\043)Spínače")
+#define TR_POTWARNING          TR("Pot Warn.", INDENT "Pot Warning")
 #define TR_TIMEZONE            "časové pásmo"
 #define TR_RXCHANNELORD        TR("Pořadí kanálů", "Výchozí pořadí kanálů")
 #define TR_SLAVE               "Podřízený"
@@ -710,7 +711,8 @@
 #define TR_LOWALARM            INDENT "Nízký Alarm"
 #define TR_CRITICALALARM       INDENT "Kritický Alarm"
 #define TR_PERSISTENT_MAH      INDENT "Store mAh"
-#define TR_CHECKLIST           "Display Checklist"
+#define TR_PREFLIGHT           "Preflight Checks"
+#define TR_CHECKLIST           INDENT "Display Checklist"
 #define TR_FAS_OFFSET          TR(INDENT "FAS Ofs", INDENT "FAS Offset")
 #define TR_UART3MODE           "Serial port"
 #define TR_POT1TYPE            "S1 Type"
