--- a/radio/src/translations/es.h.txt
+++ b/radio/src/translations/es.h.txt
@@ -440,8 +440,8 @@
 #define TR_ELIMITS             TR("E.Limite","Ampliar Limites")
 #define TR_ETRIMS              TR("E.Trims","Ampliar Trims")
 #define TR_TRIMINC             "Paso Trim"
-#define TR_TTRACE              TR( INDENT "Fuente-A", INDENT "Fuente Acelerad")
-#define TR_TTRIM               TR(INDENT "Trim-A", INDENT "Trim Acelerad")
+#define TR_TTRACE              TR("Fuente-A", INDENT "Fuente Acelerad")
+#define TR_TTRIM               TR("Trim-A", INDENT "Trim Acelerad")
 #define TR_BEEPCTR             TR("Ctr Beep","Center Beep")
 #define TR_PROTO               TR(INDENT"Proto",INDENT"Protocol")
 #define TR_PPMFRAME            "Trama PPM"
@@ -505,7 +505,7 @@
 #define TR_ALARMWARNING        INDENT"Sin Sonido"
 #define TR_RENAVIG             "RotEnc Navig"
 #define TR_THROTTLE_LABEL      "Throttle"
-#define TR_THROTTLEREVERSE     TR(INDENT "Invert_Acel", INDENT "Invertir Acel.")
+#define TR_THROTTLEREVERSE     TR("Invert_Acel", INDENT "Invertir Acel.")
 #define TR_MINUTEBEEP          TR(INDENT"Minuto",INDENT"Cada Minuto")
 #define TR_BEEPCOUNTDOWN       INDENT"Cuentaatras"
 #define TR_PERSISTENT          TR(INDENT"Persist.",INDENT"Persistente")
