--- a/radio/src/translations/pt.h.txt
+++ b/radio/src/translations/pt.h.txt
@@ -440,8 +440,8 @@
 #define TR_ELIMITS             "E.Limits"
 #define TR_ETRIMS              "E.Trims"
 #define TR_TRIMINC             "Trim Step"
-#define TR_TTRACE              INDENT"T-Trace"
-#define TR_TTRIM               INDENT"T-Trim"
+#define TR_TTRACE              TR("T-Trace",INDENT"T-Trace")
+#define TR_TTRIM               TR("T-Trim",INDENT"T-Trim")
 #define TR_BEEPCTR             "Ctr Beep"
 #define TR_PROTO               INDENT"Proto"
 #define TR_PPMFRAME            "PPM frame"
@@ -505,7 +505,7 @@
 #define TR_ALARMWARNING        INDENT"Som Off"
 #define TR_RENAVIG             "RotEnc Navig"
 #define TR_THROTTLE_LABEL      "Throttle"
-#define TR_THROTTLEREVERSE     INDENT"Inverte Acel."
+#define TR_THROTTLEREVERSE     TR("Inverte Acel.",INDENT"Inverte Acel.")
 #define TR_MINUTEBEEP          INDENT"Beep Minuto"
 #define TR_BEEPCOUNTDOWN       INDENT"Beep Regressivo"
 #define TR_PERSISTENT          INDENT"Persist."
