--- a/radio/src/translations/de.h.txt
+++ b/radio/src/translations/de.h.txt
@@ -440,8 +440,8 @@
 #define TR_ELIMITS             TR("Erw.Limit","Erweit. Limits")
 #define TR_ETRIMS              TR("Erw.Trims","Erweit. Trimmung")
 #define TR_TRIMINC             TR("Trim Schr.","Trimm Schritte")
-#define TR_TTRACE              TR(INDENT "Gasquelle", INDENT "Gas Quelle")
-#define TR_TTRIM               TR(INDENT "Gastrim",INDENT "Gas Trimmung")
+#define TR_TTRACE              TR("Gasquelle", INDENT "Gas Quelle")
+#define TR_TTRIM               TR("Gastrim",INDENT "Gas Trimmung")
 #define TR_BEEPCTR             TR("Mitt.Piep","Mittelst. Pieps")
 #define TR_PROTO               TR(INDENT"Proto.",INDENT"Protokoll")
 #define TR_PPMFRAME            "PPM Einst."
@@ -505,7 +505,7 @@
 #define TR_ALARMWARNING        INDENT"Ton aus"
 #define TR_RENAVIG             "Drehgeb. Navig."
 #define TR_THROTTLE_LABEL      "Gas"
-#define TR_THROTTLEREVERSE     TR(INDENT "Gas invers", INDENT "Vollgas hinten?") //Änderung wg TH9x, Taranis
+#define TR_THROTTLEREVERSE     TR("Gas invers", INDENT "Vollgas hinten?") //Änderung wg TH9x, Taranis
 #define TR_MINUTEBEEP          TR(INDENT"Minute",INDENT"Jede Minute")
 #define TR_BEEPCOUNTDOWN       INDENT"Countdown"
 #define TR_PERSISTENT          TR(INDENT"M-Zeit",INDENT"Modell Zeit")
